--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,53 +3,46 @@ project(GenICamApp)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set (EXTRA_INCLUDE_DIRS include)
-set (EXTRA_LIBRARY_DIRS "")
-set (EXTRA_LIBRARIES "")
+set(EXTRA_INCLUDE_DIRS include)
+set(EXTRA_LIBRARY_DIRS "")
+set(EXTRA_LIBRARIES "")
 
 # OpenCV
 find_package(OpenCV REQUIRED)
-set (EXTRA_INCLUDE_DIRS ${EXTRA_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
-set (EXTRA_LIBRARIES ${EXTRA_LIBRARIES} ${OpenCV_LIBS})
+set(EXTRA_INCLUDE_DIRS ${EXTRA_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
+set(EXTRA_LIBRARIES ${EXTRA_LIBRARIES} ${OpenCV_LIBS})
 
 # PCL
-if (true)
 find_package(PCL 1.3)
-set (EXTRA_INCLUDE_DIRS ${EXTRA_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS})
-set (EXTRA_LIBRARY_DIRS ${EXTRA_LIBRARY_DIRS} ${PCL_LIBRARY_DIRS})
-set (EXTRA_LIBRARIES ${EXTRA_LIBRARIES} ${PCL_LIBRARIES})
-add_definitions(${PCL_DEFINITIONS})
-add_definitions(-DHAVE_PCL)
+if (PCL_FOUND)
+	set(EXTRA_INCLUDE_DIRS ${EXTRA_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS})
+	set(EXTRA_LIBRARY_DIRS ${EXTRA_LIBRARY_DIRS} ${PCL_LIBRARY_DIRS})
+	set(EXTRA_LIBRARIES ${EXTRA_LIBRARIES} ${PCL_LIBRARIES})
+	add_definitions(${PCL_DEFINITIONS})
+	add_definitions(-DHAVE_PCL)
 endif()
 
 # include BOOST library if PCL is not being used
 if (NOT PCL_FOUND)
-find_package(Boost REQUIRED COMPONENTS system thread)
-
-set (EXTRA_INCLUDE_DIRS ${EXTRA_INCLUDE_DIRS} ${Boost_INCLUDE_DIR})
-set (EXTRA_LIBRARY_DIRS ${EXTRA_LIBRARY_DIRS} $ENV{BOOST_LIBRARYDIR})
-set (EXTRA_LIBRARIES ${EXTRA_LIBRARIES} ${Boost_LIBRARIES})
-add_definitions(-D_SCL_SECURE_NO_WARNINGS)
+	find_package(Boost REQUIRED COMPONENTS system thread)
+	set (EXTRA_INCLUDE_DIRS ${EXTRA_INCLUDE_DIRS} ${Boost_INCLUDE_DIR})
+	set (EXTRA_LIBRARY_DIRS ${EXTRA_LIBRARY_DIRS} $ENV{BOOST_LIBRARYDIR})
+	set (EXTRA_LIBRARIES ${EXTRA_LIBRARIES} ${Boost_LIBRARIES})
+	add_definitions(-D_SCL_SECURE_NO_WARNINGS)
 endif()
 
 # Common Vision Blox by Stemmer Imaging: GenICam driver
-if (WIN32)
-
-if(EXISTS "$ENV{CVB}/Lib/C")
+if (WIN32 AND EXISTS "$ENV{CVB}/Lib/C")
     set(EXTRA_INCLUDE_DIRS ${EXTRA_INCLUDE_DIRS} "$ENV{CVB}/Lib/C")
     set(EXTRA_LIBRARY_DIRS ${EXTRA_LIBRARY_DIRS} "$ENV{CVB}/Lib/C")
 	add_definitions(-DHAVE_GENICAM)
-endif()
-
 elseif (UNIX)
-
-set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "$ENV{CVB}/cmake")
-find_package(CVB)
-if (CVB_FOUND)
-set (EXTRA_LIBRARIES ${EXTRA_LIBRARIES} CVB::CVCDriver CVB::CVCUtilities CVB::CVGenApi)
-add_definitions(-DHAVE_GENICAM)
-endif()
-
+	set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "$ENV{CVB}/cmake")
+	find_package(CVB)
+	if (CVB_FOUND)
+		set (EXTRA_LIBRARIES ${EXTRA_LIBRARIES} CVB::CVCDriver CVB::CVCUtilities CVB::CVGenApi)
+		add_definitions(-DHAVE_GENICAM)
+	endif()
 endif()
 
 include_directories(${EXTRA_INCLUDE_DIRS})
